# b_simple

./: README.md  algo_types.py  best_prices.txt  binance_futures.py  dash.ipynb  main.py  pyproject.toml  trades.txt
